--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@ left:0;
         <img src="img_avatar4.png" alt="Avatar" style="width:30%" class="w3-circle w3-margin-top">
       </div>
 
-      <form class="w3-container" action="/overview/index.html">
+      <form class="w3-container" action="/overview/theindex.html">
         <div class="w3-section">
           <label><b>Username</b></label>
           <input class="w3-input w3-border w3-margin-bottom" type="text" placeholder="Enter Username" name="usrname" >
           <label><b>Password</b></label>
           <input class="w3-input w3-border" type="password" placeholder="Enter Password" name="psw" >
-          <button class="w3-button w3-block w3-indigo w3-section w3-padding" ><a href="index.html">Login</button>
+          <button class="w3-button w3-block w3-indigo w3-section w3-padding" ><a href="/overview/index.html">Login</button>
           <input class="w3-check w3-margin-top" type="checkbox" checked="checked"> Remember me
         </div>
       </form>
