--- a/overview/index.html
+++ b/overview/index.html
@@ -47,7 +47,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 <!-- Top container -->
 <div class="w3-bar w3-top w3-indigo w3-large" style="z-index:4">
   <button class="w3-bar-item w3-button w3-hover-none w3-hover-text-light-grey" onclick="w3_open();">   
-      <img src="logobien.png" class="w3-circle w3-margin-right" style="height:50px"></button>
+      <img src="../logobien.png" class="w3-circle w3-margin-right" style="height:50px"></button>
       <h3 class="w3-center"><b> Charlie </b></h3>
 </div>
 
@@ -137,7 +137,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <div class="w3-third w3-center">
         <h5></h5>
         <br>
-        <img src="baby1.png" style="width:70%" alt="Baby's Picture">
+        <img src="../baby1.png" style="width:70%" alt="Baby's Picture">
       </div>
       <div class="w3-twothird">
         <h5 class="w3-center">Infos</h5>
