--- a/overview/index.html
+++ b/overview/index.html
@@ -207,7 +207,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 
 
 <button onclick="modalisho()"
-class="w3-button">Open Modal</button>
+class="w3-button w3-bottommiddle">Start Demo</button>
 
 <!-- The Modal -->
 <div id="id01" class="w3-modal">
