--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@ left:0;
 
 </div>
 
+<div class="w3-display-container">
 
-
-  <div id="id01" class="w3-modal">
-    <div class="w3-modal-content w3-card-4 w3-animate-zoom" style="max-width:600px">
+  <div id="id01" class="w3-modal w3-display-center">
+    <div class="w3-modal-content w3-xlarge w3-animate-zoom" style="max-width:600px">
 
       <div class="w3-center"><br>
         <span onclick="document.getElementById('id01').style.display='none'" class="w3-button w3-xlarge w3-hover-red w3-display-topright" title="Close Modal">&times;</span>
@@ -102,8 +102,7 @@ left:0;
     </div>
   </div>
 
-
-
+</div>
 
 
 
