--- a/kno/index.html
+++ b/kno/index.html
@@ -1,29 +1,18 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>shake demo</title>
-  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
-  <style>
-  #toggle {
-    width: 100px;
-    height: 100px;
-    background: #ccc;
-  }
-  </style>
-  <script src="//code.jquery.com/jquery-1.12.4.js"></script>
-  <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-</head>
+<!DOCTYPE html>
+<html>
+<title>W3.CSS</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
- 
-<p>Click anywhere to shake the box.</p>
-<div id="toggle"></div>
- 
-<script>
-$( document ).click(function() {
-  $( "#toggle" ).effect( "shake" );
-});
-</script>
- 
-</body>
+
+<div class="w3-panel">
+  <h2>Buttons as Blocks (w3-button)</h2>
+  <button class="w3-button w3-block w3-black">Button</button>
+  <p>The size of the block can be defined using <strong>style="width:"</strong>.</p>
+</div>
+
+<div class="w3-panel" style="width:30%">
+  <button class="w3-button w3-block w3-black" type="button" onclick="navigator.vibrate(1000);">Button</button>
+</div>
+</body:
 </html>
