--- a/overview/index.html
+++ b/overview/index.html
@@ -230,6 +230,7 @@ function modalisho_rip(){
 
 function modalisho(){
   document.getElementById('id01').style.display='block';
+  navigator.vibrate(8000);
 }
 
 
