--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
           </a>
         </li>
         <li class="list-inline-item social-google-plus">
-          <a href="restaurant.menu.system@gmail.com">
+          <a href="maito:restaurant.menu.system@gmail.com">
             <i class="fab fa-google"></i>
           </a>
         </li>
